--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="com.application.musica.MService"
+        <service android:name="com.application.musica.Service.MService"
             android:enabled="true"
             android:exported="true"/>
     </application>
